Fix nav social icon sizing on certain screen sizes to not wrap to new line.

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -168,7 +168,7 @@ nav img:hover {
 	margin: 0;
 	text-align: center;
 	text-transform: uppercase;
-	width: 25%;
+	width: 28%;
 }
 
 .left a {
@@ -189,7 +189,7 @@ nav img:hover {
 	padding-right: 1%;
 	margin: 0;
 	text-align: right;
-	width: 25%;
+	width: 28%;
 }
 
 /* Content Wrapper */
